// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <AlmDefinitionFormField
    autoFocus={true}
    help="settings.pr_decoration.form.name.gitlab.help"
    id="name.gitlab"
    onFieldChange={[MockFunction]}
    propKey="key"
    value=""
  />
  <AlmDefinitionFormField
    help="settings.pr_decoration.form.personal_access_token.gitlab.help"
    id="personal_access_token"
    isTextArea={true}
    onFieldChange={[MockFunction]}
    propKey="personalAccessToken"
    value=""
  />
</Fragment>
`;

exports[`should render correctly 2`] = `
<Fragment>
  <AlmDefinitionFormField
    autoFocus={true}
    help="settings.pr_decoration.form.name.gitlab.help"
    id="name.gitlab"
    onFieldChange={[MockFunction]}
    propKey="key"
    value="foo"
  />
  <AlmDefinitionFormField
    help="settings.pr_decoration.form.personal_access_token.gitlab.help"
    id="personal_access_token"
    isTextArea={true}
    onFieldChange={[MockFunction]}
    propKey="personalAccessToken"
    value="foobar"
  />
</Fragment>
`;
